"Unable to auto-split" message in ChunkSplitter when top chunk fails is misleading

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Sharding 2019-01-28, Sharding 2019-02-11
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This log line says "Unable to auto-split chunk" for any exception that is thrown, even if it was from the moveChunk command after the split already succeeded. This line is misleading since the autosplit may have worked but the moveChunk may have failed. The logging should be more granular.

            Assignee:
            Matthew Saltz (Inactive)
            Reporter:
            Matthew Saltz (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: