SERVER-37046 Improve error message when moveChunk fails during top chunk optimization